Really fix footer on mobile.

--- a/static/src/content/style.css
+++ b/static/src/content/style.css
@@ -216,7 +216,8 @@ html, body {height: 100%;}
 	clear:both;
 } 
 
-@media only screen and (max-device-width:500)
+
+@media (max-width: 600px) {
 .footer {
     position: relative;
 	margin-top: -150px; /* negative value of footer height */
